<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:id="@+id/newItemLayout"
        tools:context=".ItemActivity">

        <EditText
            android:id="@+id/etItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintItemName"/>

        <EditText
            android:id="@+id/etItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hintNoPrice"/>

        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnChooseCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelChooseCategory"/>

        <EditText
            android:id="@+id/etItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDescription"/>

        <LinearLayout
            android:id="@+id/purchasedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbIsPurchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvIsPurchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPurchased"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintAddItem"/>



    </LinearLayout>
</ScrollView>